# movlist

./: .gitignore  README.md
server/: Cargo.toml  Movlist.postman_collection.json  README.md  movlist.db
server/src/: main.rs
