[package]
name = "movlist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
futures-util = "0.3.27"
serde = { version = "1.0.154", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-actix-rustls"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
